Support older JAVA Versions than 21